--- a/index.html
+++ b/index.html
@@ -28,35 +28,44 @@
   </nav> -->
 
 <body>
-<!-- <div class="fill-blanks"><p>web developer</p></div>
-<div class="title">
-<p>I am a _______________. </p>
-</div>
-<div class="header">
-    <img src="./images/laptop_edited.jpg" />
-</div> -->
 <div class="main">
     <div class="fill-blanks"><p>audrey kow</p></div>
     <div class="title">
     <p>My name is _____________. </p>
-</div>
+    </div>
 </div>
 
 <div class="main-text">
-<h3 class="main-title">FULL-STACK WEB DEVELOPER</h3>
-Recently graduated from General Assembly's <b>Web Development Immersive</b>.
-
-</p>
+    <h3 class="main-title">FULL-STACK WEB DEVELOPER</h3>
+    <p>Who enjoys building applications with <b>React.js</b> and <b>Ruby on Rails</b>.
+    </p>
 </div>
 
-<div class="about"></div>
-<div style="height:500px;background-color:white;font-size:36px">
-Scroll Up and Down this page to see the parallax scrolling effect.
+<div class="skills">
+    <div class="skills-title">
+        <span class="caption">BEYOND</span>
+    </div>
+</div>
+<div class="skills-text">
+    <h2 class="skills-title">PROGRAMMING SKILLS</h2>
+    <p>Languages: Javascript | HTML | CSS | Ruby</p>
+    <p>Backend: React | Node.js | Express.js | Ruby on Rails | PostgreSQL</p>
 </div>
 
 <div class="projects"></div>
-<div style="height:500px;background-color:white;font-size:36px">
-Scroll Up and Down this page to see the parallax scrolling effect.
+<div class="projects-text">
+    <h2 class="projects-title">MY PORTFOLIO</h2>
+    <p>
+        Travla | Reasy | DEFT | Scrabble
+    </p>
+</div>
+
+<div class="about">
+    </div>
+<div class="main-text">
+    <h3 class="main-title">AUDREY KOW</h3>
+    <p>Former chemist.
+    </p>
 </div>
 
 
