added media for devices

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 </div>
 <div class="skills-text">
     <h2 class="skills-title">PROGRAMMING SKILLS</h2>
-    <p>Languages: Javascript | HTML | CSS | Ruby</p>
-    <p>Backend: React | Node.js | Express.js | Ruby on Rails | PostgreSQL</p>
+    <p>FRONT-END: Javascript | HTML | CSS | Ruby | Bootstrap | Materialize</p>
+    <p>BACK-END: React | Node.js | Express.js | Ruby on Rails | PostgreSQL</p>
 </div>
 
 <div class="projects"></div>
@@ -63,7 +63,7 @@
 <div class="about">
     </div>
 <div class="main-text">
-    <h3 class="main-title">AUDREY KOW</h3>
+    <h3 class="main-title">ABOUT ME</h3>
     <p>Former chemist.
     </p>
 </div>
