--- a/index.html
+++ b/index.html
@@ -12,25 +12,80 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/snap.svg/0.3.0/snap.svg-min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
   <link rel="stylesheet" type="text/css" href="styles.css">
-    <title>Audrey Kow</title>
+    <title>Audrey Kow | Welcome!</title>
 </head>
-
-<!-- <nav>
-    <div class="nav-wrapper">
-      <a href="#!" class="brand-logo"><i class="material-icons">cloud</i>Audrey Kow</a>
-      <ul class="right hide-on-med-and-down">
-        <li><a href="sass.html"><i class="material-icons">tag_faces</i></a></li>
-        <li><a href="badges.html"><i class="material-icons">view_module</i></a></li>
-        <li><a href="collapsible.html"><i class="material-icons">refresh</i></a></li>
-        <li><a href="mobile.html"><i class="material-icons">more_vert</i></a></li>
-      </ul>
-    </div>
-  </nav> -->
 
 <body>
 <div class="main">
-    <div class="fill-blanks"><p>audrey kow</p></div>
     <div class="title">
+    <div class="fill-blanks">
+        <svg id="audrey" data-name="audrey" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 800 73">
+      <defs>
+        <clipPath id="clip-path" transform="translate(-113.35 -138)">
+          <path id="w" d="M398.5,189.54a16.4,16.4,0,0,1-1.5-3.9q-.67-2.49-1.2-5.13c-.35-1.76-.64-3.4-.88-4.92s-.39-2.64-.47-3.34c-.11.7-.35,1.75-.7,3.14a43.09,43.09,0,0,1-1.41,4.45,48.46,48.46,0,0,1-2,4.74,20.29,20.29,0,0,1-2.6,4.08,7.93,7.93,0,0,1-3.08,2.34,3.63,3.63,0,0,1-3.4-.47c-.08,0-.17-.18-.29-.44a5,5,0,0,1-.32-.88q-.15-.5-.27-1a3.13,3.13,0,0,1-.11-.76V163.05a7.9,7.9,0,0,1-1-2.72,2.7,2.7,0,0,1,.23-1.67,1.55,1.55,0,0,1,1-.74,2.46,2.46,0,0,1,1.26.06,2.42,2.42,0,0,1,1.11.74,1.91,1.91,0,0,1,.47,1.34v24.38l1.06,3.05a16.26,16.26,0,0,0,4.63-4.87,24.49,24.49,0,0,0,2.69-6.15,37.86,37.86,0,0,0,1.29-6.74q.35-3.45.47-6.68c.19,0,.46-.08.79-.12a3.93,3.93,0,0,1,1,0,2.21,2.21,0,0,1,.85.36,1.18,1.18,0,0,1,.49.79l4.05,21.32,2.05,4.11a5.91,5.91,0,0,0,2-3.29,28,28,0,0,0,1-5.56q.3-3.23.33-7t0-7.5c0-2.5,0-4.89.06-7.15a36.19,36.19,0,0,1,.55-5.86,8.5,8.5,0,0,1,1.44-3.69,2.17,2.17,0,0,1,2.66-.65c.78.24,1.16.68,1.12,1.32a4.82,4.82,0,0,1-.62,2,12.7,12.7,0,0,1-1.23,1.88l-.73.91v27.48a8.84,8.84,0,0,1-.5,2.69,15.58,15.58,0,0,1-1.32,3,14.67,14.67,0,0,1-1.87,2.61,5.2,5.2,0,0,1-2.26,1.55,3.23,3.23,0,0,1-2.43-.18A5.69,5.69,0,0,1,398.5,189.54Z" fill="none"/>
+        </clipPath>
+        <clipPath id="clip-path-2" transform="translate(-113.35 -138)">
+          <path id="o" d="M363.46,189.54a10.5,10.5,0,0,1-1.76-4.84,26.1,26.1,0,0,1,0-5.59,51.59,51.59,0,0,1,.94-5.92c.43-2,.8-3.92,1.11-5.77a37.54,37.54,0,0,0,.53-5.22,8.85,8.85,0,0,0-.82-4.19,1.38,1.38,0,0,0-1.26-.91,9,9,0,0,0-1.7.24,6.59,6.59,0,0,1-1.82.15,2.15,2.15,0,0,1-1.61-1.12,1.64,1.64,0,0,1,.44-.61,1.73,1.73,0,0,1,.56-.44,14.38,14.38,0,0,1,8.82,1.08c2.36,1.23,5.65,5.22,5.65,5.22a40.29,40.29,0,0,1,2.9,7.7,36.84,36.84,0,0,1,.56,8.61,33.76,33.76,0,0,1-1.35,7.94,15.72,15.72,0,0,1-2.81,5.66,4.36,4.36,0,0,1-3.87,1.76Q365.79,193.05,363.46,189.54Zm3-2a1.43,1.43,0,0,0,.36.46c.19.2.4.41.61.65s.42.44.62.61a2.17,2.17,0,0,0,.41.33,7.84,7.84,0,0,0,3.22-3.34,12.76,12.76,0,0,0,1.26-4.69,22.77,22.77,0,0,0-.24-5.42,37.06,37.06,0,0,0-1.26-5.48,33.69,33.69,0,0,0-1.9-4.86,26.36,26.36,0,0,0-2.08-3.64c0,.51-.12,1.29-.23,2.35s-.24,2.24-.36,3.57-.25,2.74-.41,4.22-.3,2.9-.44,4.25-.26,2.55-.38,3.6-.19,1.84-.23,2.35a5.85,5.85,0,0,0,0,1.31,13.54,13.54,0,0,0,.26,1.44c.12.47.25.91.38,1.32S366.39,187.25,366.5,187.49Z" fill="none"/>
+        </clipPath>
+        <clipPath id="clip-path-3" transform="translate(-113.35 -138)">
+          <path id="k" d="M334.63,188.48a19.55,19.55,0,0,1,.44-2.72c.25-1.19.49-2.46.7-3.81a34.66,34.66,0,0,0,.41-4,9.23,9.23,0,0,0-.38-3.36,2.82,2.82,0,0,0-1.67-1.85,4.81,4.81,0,0,0-3.48.53c-.86-.24-1.35-.57-1.47-1a1.8,1.8,0,0,1,.35-1.46A10.52,10.52,0,0,1,331,169l2-2c.66-.69,1.26-1.36,1.79-2a4,4,0,0,0,.9-1.94c0-.31-.1-1-.2-2.05s-.23-2.27-.38-3.66-.31-2.86-.44-4.42-.28-3-.44-4.46-.28-2.62-.38-3.66-.17-1.73-.21-2.08a6.84,6.84,0,0,1,0-1.44,2.46,2.46,0,0,1,.44-1.14,1.63,1.63,0,0,1,1-.61,3,3,0,0,1,1.61.2c.2,1.49.39,3.17.59,5s.41,3.81.64,5.8.5,4,.79,6,.64,3.85,1,5.56a8.17,8.17,0,0,0,1.4-1.61c.55-.76,1.14-1.6,1.76-2.52s1.28-1.83,2-2.75a15.75,15.75,0,0,1,2-2.23,3.67,3.67,0,0,1,1.75-1c.55-.1,1,.2,1.35.91a1.24,1.24,0,0,1,.06.49,1.88,1.88,0,0,1-.06.56,13.09,13.09,0,0,1-2.43,4.34c-1.11,1.32-2.25,2.61-3.4,3.86a30.05,30.05,0,0,0-3,3.84,7.9,7.9,0,0,0-1.34,4.19c.35.31.87.81,1.55,1.49l2.34,2.35,2.76,2.75,2.72,2.76c.86.87,1.63,1.66,2.32,2.34l1.49,1.49c.24.24.61.62,1.11,1.15a10.24,10.24,0,0,1,1.35,1.72,4,4,0,0,1,.65,1.82c0,.59-.32,1.08-1.06,1.47a1.37,1.37,0,0,1-.5.05,1.31,1.31,0,0,1-.49-.05c-2-2.5-4.19-5-6.6-7.59a48.23,48.23,0,0,0-7.64-6.65c0,.35-.1.9-.18,1.64s-.18,1.58-.32,2.52-.27,1.92-.41,3-.28,2-.44,3-.29,1.77-.41,2.52-.22,1.28-.29,1.64a5.29,5.29,0,0,1-.33.9,6.58,6.58,0,0,1-.67,1.21,3.08,3.08,0,0,1-.94.9,1.06,1.06,0,0,1-1.11,0c0-.15,0-.42,0-.79s0-.78,0-1.23,0-.87,0-1.26S334.63,188.64,334.63,188.48Z" fill="none"/>
+        </clipPath>
+        <clipPath id="clip-path-4" transform="translate(-113.35 -138)">
+          <path id="y" d="M279.61,209.87a5.12,5.12,0,0,1-2-2.64,10.27,10.27,0,0,1-.5-3.63,20,20,0,0,1,.59-4.19c.35-1.47.76-2.88,1.23-4.25s.95-2.64,1.46-3.81.94-2.13,1.29-2.87c.16-.35.41-.9.76-1.64s.76-1.58,1.23-2.52l1.47-2.93,1.46-2.93c.47-.94.9-1.77,1.29-2.52s.68-1.29.88-1.64a8.8,8.8,0,0,0-.38-4.33,4,4,0,0,0-1.9-2.17,4.63,4.63,0,0,0-2.85-.3,10.71,10.71,0,0,0-3.28,1.24,16.64,16.64,0,0,0-3.22,2.37,14.65,14.65,0,0,0-2.61,3.19,13.81,13.81,0,0,0-1.23,1.38c-.58.72-1.29,1.6-2.11,2.64s-1.73,2.15-2.72,3.36-2,2.4-3.05,3.55-2,2.22-3,3.19a17.12,17.12,0,0,1-2.72,2.29,4.73,4.73,0,0,1-2.17.88c-.61,0-1-.32-1.26-1.06a.68.68,0,0,1-.09-.35,5.93,5.93,0,0,1,0-.61,6.13,6.13,0,0,1,0-.62,2.31,2.31,0,0,1,.09-.47c.08-.39.24-1.21.5-2.46s.55-2.71.88-4.39.69-3.48,1.08-5.39.75-3.72,1.09-5.4.63-3.13.9-4.36.47-2,.59-2.43a4.3,4.3,0,0,1,.76-1.41,6.56,6.56,0,0,1,1.47-1.46,2.43,2.43,0,0,1,1.61-.53c.53,0,.94.49,1.26,1.35a16.29,16.29,0,0,0-1.35,2.75c-.51,1.25-1,2.66-1.49,4.22s-1,3.21-1.44,4.95-.87,3.41-1.2,5a37.26,37.26,0,0,0-.67,4.42,11.56,11.56,0,0,0,0,3.14q2.46-3.35,5.51-7.09t6.21-7.09a58.13,58.13,0,0,1,6.3-5.8,16.61,16.61,0,0,1,5.8-3.17,5.27,5.27,0,0,1,4.69.8c1.35,1,2.35,3,3,6.06l7.15-6.09h3q.52,1.63,0,2.22a3.56,3.56,0,0,1-1.61.91l-2.31.7a4,4,0,0,0-2.11,1.56,6.75,6.75,0,0,0-1,3.45,21,21,0,0,0,.94,6.45,35.29,35.29,0,0,1,1.14,6,25.88,25.88,0,0,1-.08,6.16,23.88,23.88,0,0,1-.91,3.66,41.2,41.2,0,0,1-1.91,4.83,38.6,38.6,0,0,1-2.75,4.92,19,19,0,0,1-3.43,4,8.32,8.32,0,0,1-3.95,2A5.87,5.87,0,0,1,279.61,209.87Zm1-5.1c.31,1.48,1.21,1.9,1.55,2.81s1.55.35,2.49-.11a10.08,10.08,0,0,0,3-2.52,23.85,23.85,0,0,0,2.87-4.34,31.75,31.75,0,0,0,2.25-5.6,27.45,27.45,0,0,0,1.15-6.29,23.16,23.16,0,0,0-.5-6.42,17,17,0,0,0-2.64-6,11.88,11.88,0,0,0-2.69,3.05A34.64,34.64,0,0,0,285.5,184q-1.2,2.64-2.26,5.59a57.12,57.12,0,0,0-1.73,5.8,41.91,41.91,0,0,0-.93,5.31A14.06,14.06,0,0,0,280.61,204.77Z" fill="none"/>
+        </clipPath>
+        <clipPath id="clip-path-5" transform="translate(-113.35 -138)">
+          <path id="e" d="M236.13,191.59a14.85,14.85,0,0,1-3.89-4.54,44.12,44.12,0,0,1-2.2-5.6,10,10,0,0,1-1.06.64c-.46.24-1.43.59-1.43.59s-1,.26-1.44.32a1.47,1.47,0,0,1-1-.14.67.67,0,0,1-.18-.79A5.15,5.15,0,0,1,226,180.4a5.6,5.6,0,0,1,.73-.77l1.32-1.26q.7-.66,1.29-1.29a8.52,8.52,0,0,0,.7-.79,10,10,0,0,0,.79-3.22q.15-1.75.18-3.66c0-1.27.08-2.53.2-3.78a11.74,11.74,0,0,1,.88-3.52,10.59,10.59,0,0,1,1.55-2.31,24.79,24.79,0,0,1,2.58-2.67,28,28,0,0,1,2.93-2.31,7.92,7.92,0,0,1,2.58-1.26,1.36,1.36,0,0,1,1.58.53c.33.51.32,1.48,0,2.93a21.26,21.26,0,0,1-2,5q-1.32,2.43-2.73,4.8c-.93,1.58-1.82,3.16-2.66,4.72a18.19,18.19,0,0,0-1.79,4.74,14.79,14.79,0,0,0-.29,3.14,16.17,16.17,0,0,0,.41,3.66,10.3,10.3,0,0,0,1.35,3.31,4.88,4.88,0,0,0,2.57,2.08,6.82,6.82,0,0,0,3.75.35,12.16,12.16,0,0,0,3.67-1.34A18.84,18.84,0,0,0,249,185a42.09,42.09,0,0,0,3-3.08c.94-1.06,1.78-2.08,2.52-3.08s1.37-1.84,1.88-2.55l1,1.06c.27.23.11.9-.5,2a23.93,23.93,0,0,1-2.63,3.72,45.48,45.48,0,0,1-4.08,4.25,27.48,27.48,0,0,1-4.83,3.63,13.59,13.59,0,0,1-4.92,1.82A5.56,5.56,0,0,1,236.13,191.59Zm-2-25.49s-.07.54-.09,1,0,1,0,1.56,0,1,0,1.52a7.32,7.32,0,0,0,.09,1q1.88-3.22,3.52-6.86a44,44,0,0,0,2.57-7.32,7.32,7.32,0,0,0-2.43,1.43,9.64,9.64,0,0,0-1.84,2.23,12,12,0,0,0-1.2,2.66C234.46,164.28,234.14,166.1,234.14,166.1Z" fill="none"/>
+        </clipPath>
+        <clipPath id="clip-path-6" transform="translate(-113.35 -138)">
+          <path id="audr" d="M221.31,156.37a12.25,12.25,0,0,0-4.6-.41,19,19,0,0,0-4.69,1.09,27.68,27.68,0,0,0-4.48,2.11,40.33,40.33,0,0,0-4,2.66c-.2-1.13-.39-1.66-.59-1.58s-.38.6-.56,1.55-.34,2.27-.49,3.93-.29,3.48-.38,5.48-.17,4.06-.21,6.21c0,1.06,0,2.11,0,3.13a8.93,8.93,0,0,1-3.47,1.47,5.94,5.94,0,0,1-4.19-.74,7.89,7.89,0,0,1-2.93-3.45,12.9,12.9,0,0,1-1.11-5.57V143.72c0-.08-.08-.18-.23-.3a4.14,4.14,0,0,0-.56-.32c-.22-.1-.44-.18-.67-.26a1.92,1.92,0,0,0-.59-.12c-.12,0-.31.13-.59.38a1.39,1.39,0,0,0-.46.62l-2,16.34a5.69,5.69,0,0,0-3.75-1.9,5,5,0,0,0-3.39,1.29,12.85,12.85,0,0,0-2.91,3.69,35.66,35.66,0,0,0-2.34,5.24,48.14,48.14,0,0,0-1.7,6,52.22,52.22,0,0,0-.94,6.09,33,33,0,0,0-.08,5.31c0,.23,0,.45.07.67a7.38,7.38,0,0,1-1.48.61,4.13,4.13,0,0,1-3.19-.23,5.25,5.25,0,0,1-2.14-2.46,16.41,16.41,0,0,1-1.26-4,35.68,35.68,0,0,1-.56-4.93c-.08-1.73-.11-3.44-.09-5.12s.09-3.24.21-4.69.21-2.62.29-3.52h-4.1v15.24a8.71,8.71,0,0,1-.73,3.22,21.08,21.08,0,0,1-1.82,3.49,15.86,15.86,0,0,1-2.34,2.87,4.09,4.09,0,0,1-2.4,1.29,2.07,2.07,0,0,1-1.94-1.2,10.1,10.1,0,0,1-.91-4.57c0-.51,0-1.29,0-2.35V179a4.77,4.77,0,0,0,.29-1.62,2,2,0,0,0-.29-.1v-.75c0-1.35,0-2.76,0-4.25s0-2.89,0-4.22,0-2.52,0-3.57,0-1.84,0-2.35a5.62,5.62,0,0,0-.67-.11,4.43,4.43,0,0,0-1,0,2.31,2.31,0,0,0-.93.29.8.8,0,0,0-.41.76v15.2c-.63.41-1.26.85-1.94,1.35-1,.77-2,1.49-3.07,2.17a5.06,5.06,0,0,1-3,1,3.79,3.79,0,0,1-2.75-1.67A14.41,14.41,0,0,1,131,175.3c-.12-.51-.29-1.29-.5-2.35s-.46-2.25-.73-3.6-.56-2.75-.85-4.22-.58-2.87-.85-4.22-.52-2.55-.73-3.6-.37-1.84-.44-2.34a2,2,0,0,0-.41-.56,1.36,1.36,0,0,0-.65-.44,11.8,11.8,0,0,0-4-.76,3.68,3.68,0,0,0-2.52,1,6.46,6.46,0,0,0-1.53,2.67,35.39,35.39,0,0,0-1,4.19c-.08.51-.21,1.28-.38,2.31s-.36,2.22-.56,3.55-.41,2.73-.64,4.22-.45,2.89-.65,4.22-.37,2.54-.52,3.63-.26,1.91-.3,2.46a31.2,31.2,0,0,0-.26,5.16,12.55,12.55,0,0,0,1.26,5c.39.82.84,1.29,1.35,1.4a1.91,1.91,0,0,0,1.52-.32,6.47,6.47,0,0,0,1.49-1.41,16.69,16.69,0,0,0,1.32-1.87,19.31,19.31,0,0,0,1-1.79c.25-.54.42-.91.5-1.11.15-.51.43-1.39.82-2.64s.8-2.58,1.23-4,.83-2.74,1.2-4,.61-2.12.73-2.63a3.5,3.5,0,0,1,1.61,2q.68,1.56,1.41,3.54a42.09,42.09,0,0,0,1.67,3.93,7.91,7.91,0,0,0,2.46,3,5.6,5.6,0,0,0,3.72,1,11.81,11.81,0,0,0,5.48-2.28,19,19,0,0,0,1.64-1.29l.12-.11v2.39a5.62,5.62,0,0,0,.11.82q.12.6.27,1.26a11.74,11.74,0,0,0,.32,1.24,6.55,6.55,0,0,0,.29.79,4.73,4.73,0,0,0,2.35,2.49,3.64,3.64,0,0,0,2.63-.12,8.34,8.34,0,0,0,2.67-1.88,26.46,26.46,0,0,0,2.46-2.81,33.24,33.24,0,0,0,2-2.81c.55-.88.94-1.53,1.18-2l.79,1.64q.56,1.17,1.2,2.46t1.23,2.43c.39.76.66,1.28.82,1.55a4.7,4.7,0,0,0,.5.59,2,2,0,0,0,.55.47,6.1,6.1,0,0,0,3-.21,11,11,0,0,0,3.28-1.55c.22-.15.43-.31.63-.47l.08.18a5.54,5.54,0,0,0,2,2.28,4.61,4.61,0,0,0,2.52.76,4.76,4.76,0,0,0,2.55-.76,5.94,5.94,0,0,0,2.05-2.28l.88-1.5s.82-1.46,1.29-2.34.95-1.8,1.46-2.76l1.47-2.75c.46-.88.88-1.66,1.25-2.34s.64-1.2.8-1.56a21.47,21.47,0,0,0,1,2.52q.61,1.29,1.35,2.52a14.6,14.6,0,0,0,1.67,2.29,10.11,10.11,0,0,0,2.11,1.81,4.9,4.9,0,0,0,3,.94,7.24,7.24,0,0,0,2.93-.73,10.7,10.7,0,0,0,2.51-1.73l.24-.23c.06,1.9.18,3.64.35,5.21a19.48,19.48,0,0,0,.7,3.72c.3.88.66,1.31,1.09,1.29s.95-.67,1.58-2V166.51a4.77,4.77,0,0,1,.85-2.84,7.47,7.47,0,0,1,2.23-2,13,13,0,0,1,3.07-1.38,20.76,20.76,0,0,1,3.4-.76,23.08,23.08,0,0,1,3.22-.24,13.46,13.46,0,0,1,2.46.18,1.55,1.55,0,0,0,1.12-1.29A3.94,3.94,0,0,0,221.31,156.37ZM123.9,171.69a47.82,47.82,0,0,1-2.49,8.56,40.75,40.75,0,0,1-3.69,7.24,21.9,21.9,0,0,1-.15-2.64q0-1.87,0-4c0-1.4,0-2.73,0-4a20.12,20.12,0,0,1,.15-2.58c.11-.9.32-2.18.61-3.84s.65-3.43,1.08-5.33.94-3.76,1.53-5.59a25.87,25.87,0,0,1,1.87-4.57,21.53,21.53,0,0,1,1.76,7.94A38.37,38.37,0,0,1,123.9,171.69Zm60.73-1.52a51.06,51.06,0,0,1-1.76,6.83,32.37,32.37,0,0,1-2.9,6.33,17.83,17.83,0,0,1-4.66,5.15.72.72,0,0,1-.61.18,1.55,1.55,0,0,1-.62-.27,2.57,2.57,0,0,1-.52-.47,1.4,1.4,0,0,1-.3-.43,42.55,42.55,0,0,1-.5-5.42,36.91,36.91,0,0,1,.27-5.69,25.43,25.43,0,0,1,1.23-5.3,13.49,13.49,0,0,1,2.4-4.34,9.47,9.47,0,0,1,3.78-2.72,10.71,10.71,0,0,1,5.42-.5Z" fill="none"/>
+        </clipPath>
+      </defs>
+      <title>audreykow</title>
+      <g id="w_mask">
+        <g clip-path="url(#clip-path)">
+          <path id="w1" d="M380,157l1,4a58.18,58.18,0,0,1,1,7v18a6.38,6.38,0,0,0,1,3,2.15,2.15,0,0,0,1,1,7.71,7.71,0,0,0,4-4s1.86-3.12,3-5a31.91,31.91,0,0,0,2-7c.44-2.64.82-4.94,1-6,.2-1.21.5-4.5,1-3a33.07,33.07,0,0,1,1,6c.19,1.15.63,3.77,1,6,0,0,.62,2.47,1,4l1,4c.41,1.63.76,3,1,4l1,2a2.23,2.23,0,0,0,2,0c1.45-.66,2.28-2.25,3-4l1-3,.4-3.19c.22-1.81.41-3.29.6-4.81V153c0-2,3-4,3-4" transform="translate(-113.35 -138)" fill="none" stroke="#000" stroke-linecap="round" stroke-miterlimit="10" stroke-width="3"/>
+        </g>
+      </g>
+      <g id="o_mask">
+        <g clip-path="url(#clip-path-2)">
+          <path id="o1" d="M355,157a17.31,17.31,0,0,1,7-1c4.64.86,5.5,1.95,7,3a18.56,18.56,0,0,1,4,8l1,4c.3,1.92,1.28,5.93,1,8a55,55,0,0,1-1,6,12.63,12.63,0,0,1-3,5l-2,1c-1.17.63-2.4-.44-4-2a16.2,16.2,0,0,1-1-7,63.32,63.32,0,0,1,1-10c.61-5,.3-7.11,1-10a23.4,23.4,0,0,1,1-5" transform="translate(-113.35 -138)" fill="none" stroke="#000" stroke-linecap="round" stroke-miterlimit="10" stroke-width="3"/>
+        </g>
+      </g>
+      <g id="k_mask">
+        <g clip-path="url(#clip-path-3)">
+          <path id="k3" d="M338.5,171.5,344,177l8,8,3,3.39" transform="translate(-113.35 -138)" fill="none" stroke="#000" stroke-linecap="round" stroke-miterlimit="10" stroke-width="3"/>
+          <path id="k2" d="M349.5,152.5S339.72,164.29,338,166c-1.37,1.37-10,8-8.5,6.5" transform="translate(-113.35 -138)" fill="none" stroke="#000" stroke-linecap="round" stroke-miterlimit="10" stroke-width="3"/>
+          <g id="k1">
+            <path d="M335.5,139.5c1.12,8.92,1.94,19,2.5,23.5v14a92.12,92.12,0,0,1-3.5,15.5" transform="translate(-113.35 -138)" fill="none" stroke="#000" stroke-miterlimit="10" stroke-width="3"/>
+            <path id="k1" d="M335.5,139.5c1.12,8.92,1.94,19,2.5,23.5v14a92.12,92.12,0,0,1-3.5,15.5" transform="translate(-113.35 -138)" fill="none" stroke="#000" stroke-linecap="round" stroke-miterlimit="10" stroke-width="3"/>
+          </g>
+        </g>
+      </g>
+      <g id="y_mask">
+        <g clip-path="url(#clip-path-4)">
+          <path id="y1" d="M266,159a31.18,31.18,0,0,0-4,8l-3,12c-.43,2.42-1.28,7.9-1,10,.56.45,2-1,2-1a41.78,41.78,0,0,0,6-6l11-13c3.49-2.35,6.56-3.81,9-4,1.83.57,2.95,2.23,4,4a25.88,25.88,0,0,1,5,14c.69,2.86.4,6.87,0,11-.32,2.71-4,9-4,9s-4,5-7,6c-2,.33-3.33,0-4-1a14.41,14.41,0,0,1-1-6,42.12,42.12,0,0,1,2.54-11.16L285,183l5-9a34.3,34.3,0,0,1,6-6,53.4,53.4,0,0,1,5-3l3-2" transform="translate(-113.35 -138)" fill="none" stroke="#000" stroke-miterlimit="10" stroke-width="3"/>
+        </g>
+      </g>
+      <g id="e_mask">
+        <g clip-path="url(#clip-path-5)">
+          <path id="e1" d="M258,176l-3,4c-3.18,3.89-6.42,8-9,9a11.56,11.56,0,0,1-8,1c-2.63-1.68-4.88-5-5-7-1-3-1-6.68-1-10,0,0-.18-6.55,1-10a18.66,18.66,0,0,1,3-4,29.42,29.42,0,0,1,5-4s1-1,1,0a23.23,23.23,0,0,1-3,9s-7,14-8,15-1.2.86-3.5,2.5a21.74,21.74,0,0,1-3,1" transform="translate(-113.35 -138)" fill="none" stroke="#000" stroke-miterlimit="10" stroke-width="3"/>
+        </g>
+      </g>
+      <g id="audr_mask">
+        <g clip-path="url(#clip-path-6)">
+          <path id="audr8" d="M203,165c.93-1.61,4-4,4-4s4.72-3,6-3a13.19,13.19,0,0,1,10,0" transform="translate(-113.35 -138)" fill="none" stroke="#000" stroke-linecap="round" stroke-miterlimit="10" />
+          <path id="audr7" d="M203,166.68c0,2.32,1,29.32,1,29.32" transform="translate(-113.35 -138)" fill="none" stroke="#000" stroke-linecap="round" stroke-miterlimit="10" />
+          <path id="audr6" d="M187,168h0c-.4.55,2.43,12,3,12,0,0,2,4,5,5,3.64.28,7.93-3.82,8-6,.05-1.59.11-14.63.05-19.33,0-1,0-1.67-.05-1.67" transform="translate(-113.35 -138)" fill="none" stroke="#000" stroke-linecap="round" stroke-miterlimit="10" />
+          <path id="audr5" d="M191,163a20.73,20.73,0,0,0-7.5-1.5c-3.23-.85-6.75,1.23-8.5,4.5a42.09,42.09,0,0,0-4,11,17.63,17.63,0,0,0,0,9,24.15,24.15,0,0,0,1,3c1,2.39,3.57,1.06,5,0a68.14,68.14,0,0,0,7-10c4.15-9.13,3.47-11.95,4-16,.92-7.1,0-24.18,0-22" transform="translate(-113.35 -138)" fill="none" stroke="#000" stroke-linecap="round" stroke-miterlimit="10" />
+          <path id="audr4" d="M159,178c-.36,6.79,5,12,5,12s5.92.27,7-4" transform="translate(-113.35 -138)" fill="none" stroke="#000" stroke-linecap="round" stroke-miterlimit="10" />
+          <path id="audr3" d="M159,160v18l-3,6a22.62,22.62,0,0,1-5,6c-.66.22-2.3.71-3,0s-2.21-3.41-3-9v-2" transform="translate(-113.35 -138)" fill="none" stroke="#000" stroke-linecap="round" stroke-linejoin="round" />
+          <path id="audr2" d="M126.5,163.5l.5,2.5a63.62,63.62,0,0,0,5,16c.08,1.81,3.6,3.07,4,3a11.09,11.09,0,0,0,5-2c1.61-1.57,1.95-1.95,2-2l2-2V160" transform="translate(-113.35 -138)" fill="none" stroke="#000" stroke-linecap="round" stroke-miterlimit="10" />
+          <path id="audr1" d="M122,151a71.68,71.68,0,0,0-5,16c-.5,3.78-2,14-2,15-.2,4.29-.42,9.14,1,9a4,4,0,0,0,3-2,86.54,86.54,0,0,0,5-13l1.39-6.24,1.08-4.86c.11-2.51-2.47-9.9-2.47-9.9l-1-1h-2" transform="translate(-113.35 -138)" fill="none" stroke="#000" stroke-linecap="round" stroke-miterlimit="10" />
+        </g>
+      </g>
+    </svg>
+</div>
+
     <p>My name is _____________. </p>
     </div>
 </div>
@@ -43,20 +98,22 @@
 
 <div class="skills">
     <div class="skills-title">
-        <span class="caption">BEYOND</span>
+        <span class="caption">MOVING BEYOND </span>
     </div>
 </div>
 <div class="skills-text">
-    <h2 class="skills-title">PROGRAMMING SKILLS</h2>
-    <p>FRONT-END: Javascript | HTML | CSS | Ruby | Bootstrap | Materialize</p>
+    <h2 class="skills-title">SKILLS</h2>
+    <p>FRONT-END: Javascript | HTML | CSS | Bootstrap | Materialize</p>
     <p>BACK-END: React | Node.js | Express.js | Ruby on Rails | PostgreSQL</p>
+    <p>OTHERS: Git | Adobe Illustrator</p>
+    <p>LANGUAGES: English | Mandarin | Japanese
 </div>
 
 <div class="projects"></div>
 <div class="projects-text">
     <h2 class="projects-title">MY PORTFOLIO</h2>
     <p>
-        Travla | Reasy | DEFT | Scrabble
+        <a href="https://github.com/audthenerd/travela_latest">Travela</a> | <a href="https://github.com/audthenerd/reasy_restaurant">Reasy</a> | <a href="https://github.com/audthenerd/deft_lms">DEFT</a> | <a href="https://github.com/audthenerd/scrabble_boardgame">Scrabble</a>
     </p>
 </div>
 
