added icons and js

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans|Over+the+Rainbow" rel="stylesheet">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/snap.svg/0.3.0/snap.svg-min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="styles.css">
     <title>Audrey Kow | Welcome!</title>
 </head>
@@ -88,6 +89,8 @@
 
     <p>My name is _____________. </p>
     </div>
+
+    <i id="details" class="large material-icons">details</i>
 </div>
 
 <div class="main-text">
@@ -98,7 +101,8 @@
 
 <div class="skills">
     <div class="skills-title">
-        <span class="caption">MOVING BEYOND </span>
+        <span class="caption" data-period="2000"
+     data-rotate='["MOVING BEYOND", "PUSHING BOUNDARIES"]'></span>
     </div>
 </div>
 <div class="skills-text">
@@ -121,8 +125,20 @@
     </div>
 <div class="main-text">
     <h3 class="main-title">ABOUT ME</h3>
-    <p>Former chemist.
+    <p>My name is <b>Audrey</b> and I'm currently based in <b>Singapore</b>.<br><br>
+    I was previously a <b>QC Chemist</b> for 6 years and recently pursued my passion in <b>Web Development</b>. <br><br>
+    I enjoy building <b>responsive</b> and <b>pretty</b> web designs with <b>good functionality</b>.
     </p>
+    <br>
+    <p>If you are seeking a web presence, get in touch with me! <br>
+        <span style="font-size: 48px; color: black;">
+            <i class="fas fa-envelope-open"></i></i>
+        </span>
+        <span style="font-size: 48px; color: Dodgerblue;">
+            <i class="fab fa-twitter"></i>
+        </span>
+    </p>
+
 </div>
 
 
