--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <div class="main">
     <div class="title">
     <div class="fill-blanks">
-        <svg id="audrey" data-name="audrey" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 800 73">
+        <svg id="audrey" data-name="audrey" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 299 73">
       <defs>
         <clipPath id="clip-path" transform="translate(-113.35 -138)">
           <path id="w" d="M398.5,189.54a16.4,16.4,0,0,1-1.5-3.9q-.67-2.49-1.2-5.13c-.35-1.76-.64-3.4-.88-4.92s-.39-2.64-.47-3.34c-.11.7-.35,1.75-.7,3.14a43.09,43.09,0,0,1-1.41,4.45,48.46,48.46,0,0,1-2,4.74,20.29,20.29,0,0,1-2.6,4.08,7.93,7.93,0,0,1-3.08,2.34,3.63,3.63,0,0,1-3.4-.47c-.08,0-.17-.18-.29-.44a5,5,0,0,1-.32-.88q-.15-.5-.27-1a3.13,3.13,0,0,1-.11-.76V163.05a7.9,7.9,0,0,1-1-2.72,2.7,2.7,0,0,1,.23-1.67,1.55,1.55,0,0,1,1-.74,2.46,2.46,0,0,1,1.26.06,2.42,2.42,0,0,1,1.11.74,1.91,1.91,0,0,1,.47,1.34v24.38l1.06,3.05a16.26,16.26,0,0,0,4.63-4.87,24.49,24.49,0,0,0,2.69-6.15,37.86,37.86,0,0,0,1.29-6.74q.35-3.45.47-6.68c.19,0,.46-.08.79-.12a3.93,3.93,0,0,1,1,0,2.21,2.21,0,0,1,.85.36,1.18,1.18,0,0,1,.49.79l4.05,21.32,2.05,4.11a5.91,5.91,0,0,0,2-3.29,28,28,0,0,0,1-5.56q.3-3.23.33-7t0-7.5c0-2.5,0-4.89.06-7.15a36.19,36.19,0,0,1,.55-5.86,8.5,8.5,0,0,1,1.44-3.69,2.17,2.17,0,0,1,2.66-.65c.78.24,1.16.68,1.12,1.32a4.82,4.82,0,0,1-.62,2,12.7,12.7,0,0,1-1.23,1.88l-.73.91v27.48a8.84,8.84,0,0,1-.5,2.69,15.58,15.58,0,0,1-1.32,3,14.67,14.67,0,0,1-1.87,2.61,5.2,5.2,0,0,1-2.26,1.55,3.23,3.23,0,0,1-2.43-.18A5.69,5.69,0,0,1,398.5,189.54Z" fill="none"/>
@@ -90,7 +90,9 @@
     <p>My name is _____________. </p>
     </div>
 
-    <i id="details" class="large material-icons">details</i>
+    <span id="details">
+        <i class="fas fa-angle-double-down"></i>
+    </span>
 </div>
 
 <div class="main-text">
@@ -102,7 +104,7 @@
 <div class="skills">
     <div class="skills-title">
         <span class="caption" data-period="2000"
-     data-rotate='["MOVING BEYOND", "PUSHING BOUNDARIES"]'></span>
+     data-rotate='["GOING BEYOND", "PUSHING BOUNDARIES"]'></span>
     </div>
 </div>
 <div class="skills-text">
@@ -117,10 +119,11 @@
 <div class="projects-text">
     <h2 class="projects-title">MY PORTFOLIO</h2>
     <p>
-        <a href="https://github.com/audthenerd/travela_latest">Travela</a> | <a href="https://github.com/audthenerd/reasy_restaurant">Reasy</a> | <a href="https://github.com/audthenerd/deft_lms">DEFT</a> | <a href="https://github.com/audthenerd/scrabble_boardgame">Scrabble</a>
-    </p>
-</div>
+        <div class="msg">HELLO</div><button class="travela-link">Travela</button>| <a href="https://github.com/audthenerd/reasy_restaurant">Reasy</a> | <a href="https://github.com/audthenerd/deft_lms">DEFT</a> | <a href="https://github.com/audthenerd/scrabble_boardgame">Scrabble</a>
 
+<!-- https://github.com/audthenerd/travela_latest -->
+</p>
+</div>
 <div class="about">
     </div>
 <div class="main-text">
@@ -131,17 +134,24 @@
     </p>
     <br>
     <p>If you are seeking a web presence, get in touch with me! <br>
-        <span style="font-size: 48px; color: black;">
-            <i class="fas fa-envelope-open"></i></i>
-        </span>
-        <span style="font-size: 48px; color: Dodgerblue;">
-            <i class="fab fa-twitter"></i>
-        </span>
+        <a href="mailto:aud.kow88@gmail.com"><span style="font-size: 48px; color: black;">
+            <i class="fas fa-envelope-open"></i>
+        </span></a>
+
+         <a href="https://twitter.com/audrehh88"><span style="font-size: 48px; color: Dodgerblue;">
+           <i class="fab fa-twitter"></i>
+        </span></a>
+        <a href="https://github.com/audthenerd"><span style="font-size: 48px; color: grey;">
+            <i class="fab fa-github"></i>
+        </span></a>
+        <a href="https://www.linkedin.com/in/audreykow/"><span style="font-size: 48px; color: #0B62A6;">
+             <i class="fab fa-linkedin-in"></i>
+        </span></a>
     </p>
 
 </div>
-
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
