changed some css

--- a/index.html
+++ b/index.html
@@ -86,6 +86,9 @@
     </p>
 
 </div>
+<footer>
+    Copyright 2018
+    </footer>
 <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
