filled in modal contents

--- a/index.html
+++ b/index.html
@@ -52,10 +52,12 @@
 </div>
 
 <div class="projects"></div>
+<div class="cover"></div>
 <div class="projects-text">
     <h2 class="projects-title">MY PORTFOLIO</h2>
+    <p>Here are some of the projects I've worked on. Click on them to find out more!</p>
     <p>
-        <button id="travela-link">Travela</button>| <a href="https://github.com/audthenerd/reasy_restaurant">Reasy</a> | <a href="https://github.com/audthenerd/deft_lms">DEFT</a> | <a href="https://github.com/audthenerd/scrabble_boardgame">Scrabble</a>
+        <button class="btn">Travela</button>| <button class="btn">Reasy</button> | <button class="btn">DEFT</button> | <button class="btn">Scrabble</button>
     </p>
     </div>
 
@@ -63,14 +65,14 @@
     <!-- ***********
     MODALS
     *********** -->
-        <div id="myModal" class="modal">
+        <div id="myModal-travela" class="modal">
 
           <!-- Modal content -->
           <div class="modal-content">
             <span class="close">&times;</span>
             <h3>TRAVELA <a href="https://github.com/audthenerd/travela">
                 <span class="contact-icons" style="color: grey;">
-                <i class="fab fa-github"></i></span></a><a href="https://my-travela.herokuapp.com/>
+                <i class="fab fa-github"></i></span></a><a href="https://my-travela.herokuapp.com/">
                 <span class="contact-icons" style="color: skyblue;">
                 <i class="fas fa-window-maximize"></i></span></a></h3>
             <p><b><i>All-in-One: Itinerary Planner.Google Maps.Foursquare Places</i></b></p>
@@ -80,13 +82,91 @@
 
             <p class="in-modal">
                 <ul>
+                    <li>Platform used: Rails Webpack | PostgreSQL</li>
                     <li>Search for places of interest in Google Maps and scout for nearby gems with Foursquare Places.</li>
                     <li>Add them into the Itinerary Planner with just one click!</li>
                 </ul>
             </p>
           </div>
         </div>
-<!-- https://github.com/audthenerd/travela_latest -->
+
+        <div id="myModal-reasy" class="modal">
+
+          <!-- Modal content -->
+          <div class="modal-content">
+            <span class="close">&times;</span>
+            <h3>REASY <a href="https://github.com/audthenerd/reasy_restaurant">
+                <span class="contact-icons" style="color: grey;">
+                <i class="fab fa-github"></i></span></a>
+                <a href="https://reasy.herokuapp.com/">
+                <span class="contact-icons" style="color: skyblue;">
+                <i class="fas fa-window-maximize"></i></span></a></h3>
+            <p><b><i>Restaurant reservation app for people in a hurry</i></b></p>
+            <div class="app-pic1">
+                <img src="./images/reasy/reasy-1.png"><img src="./images/reasy/reasy-2.png"><img src="./images/reasy/reasy-3.png">
+            </div>
+
+            <p class="in-modal">
+                <ul>
+                    <li>Platform used: Ruby on Rails | PostgreSQL</li>
+                    <li>Reserve a seat and choose your desired meal before you go.</li>
+                    <li>Viola! Meal will be served right when you reach the restaurant!</li>
+                </ul>
+            </p>
+          </div>
+        </div>
+
+        <div id="myModal-deft" class="modal">
+
+          <!-- Modal content -->
+          <div class="modal-content">
+            <span class="close">&times;</span>
+            <h3>DEFT <a href="https://github.com/audthenerd/deft_lms">
+                <span class="contact-icons" style="color: grey;">
+                <i class="fab fa-github"></i></span></a>
+                <a href="https://deft-lms.herokuapp.com/">
+                <span class="contact-icons" style="color: skyblue;">
+                <i class="fas fa-window-maximize"></i></span></a></h3>
+            <p><b><i>User-Friendly Lab Management System</i></b></p>
+            <div class="app-pic2">
+                <img src="./images/deft/deft-1.png"><img src="./images/deft/deft-2.png"><img src="./images/deft/deft-3.png">
+            </div>
+
+            <p class="in-modal">
+                <ul>
+                    <li>Platform used: React | Express.js | Node.js</li>
+                    <li>A system for labs to track samples, equipment and manpower.</li>
+                    <li>As these systems tend to have complex interfaces, this version simplifies it.</li>
+                </ul>
+            </p>
+          </div>
+        </div>
+
+        <div id="myModal-scrabble" class="modal">
+
+          <!-- Modal content -->
+          <div class="modal-content">
+            <span class="close">&times;</span>
+            <h3>Scrabble<a href="https://github.com/audthenerd/scrabble_boardgame">
+                <span class="contact-icons" style="color: grey;">
+                <i class="fab fa-github"></i></span></a>
+                <a href="www.audkow.me">
+                <span class="contact-icons" style="color: skyblue;">
+                <i class="fas fa-window-maximize"></i></span></a></h3>
+            <p><b><i>An Old-School Board Game</i></b></p>
+            <div class="app-pic1">
+                <img src="./images/scrabble/scrabble-1.png">
+            </div>
+
+            <p class="in-modal">
+                <ul>
+                    <li>Platform used: Vanilla Javascript</li>
+                    <li>Because I love word games!</li>
+                </ul>
+            </p>
+          </div>
+        </div>
+
 
 <div class="about">
     </div>
