modified the modal texts

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
             <p class="in-modal">
                 <ul>
-                    <li>Platform used: Rails Webpack | PostgreSQL</li>
+                    <li><b>Platform(s) used: React on Rails | PostgreSQL<b></li>
                     <li>Search for places of interest in Google Maps and scout for nearby gems with Foursquare Places.</li>
                     <li>Add them into the Itinerary Planner with just one click!</li>
                 </ul>
@@ -108,7 +108,7 @@
 
             <p class="in-modal">
                 <ul>
-                    <li>Platform used: Ruby on Rails | PostgreSQL</li>
+                    <li><b>Platform(s) used: Ruby on Rails | PostgreSQL</b></li>
                     <li>Reserve a seat and choose your desired meal before you go.</li>
                     <li>Viola! Meal will be served right when you reach the restaurant!</li>
                 </ul>
@@ -134,7 +134,7 @@
 
             <p class="in-modal">
                 <ul>
-                    <li>Platform used: React | Express.js | Node.js</li>
+                    <li><b>Platform(s) used: React | Express.js | Node.js</b></li>
                     <li>A system for labs to track samples, equipment and manpower.</li>
                     <li>As these systems tend to have complex interfaces, this version simplifies it.</li>
                 </ul>
@@ -160,8 +160,9 @@
 
             <p class="in-modal">
                 <ul>
-                    <li>Platform used: Vanilla Javascript</li>
-                    <li>Because I love word games!</li>
+                    <li>Project under maintenance</li>
+                   <u><li><b>Platform(s) used: Vanilla Javascript</b></li></u>
+                    <u><li>Because I love word games!</li></u>
                 </ul>
             </p>
           </div>
