changed css for svg

--- a/index.html
+++ b/index.html
@@ -19,10 +19,7 @@
 <body>
 <div class="main">
     <div class="title">
-    <div class="fill-blanks">
-        <img id="audrey" src="./svg/audreykow.svg" alt="image">
-    </div>
-
+    <img id="audrey" src="./svg/audreykow.svg" alt="image">
     <p>My name is _____________. </p>
     </div>
 
@@ -72,9 +69,10 @@
             <span class="close">&times;</span>
             <h3>TRAVELA <a href="https://github.com/audthenerd/travela">
                 <span class="contact-icons" style="color: grey;">
-                <i class="fab fa-github"></i></span></a><a href="https://my-travela.herokuapp.com/">
+                <i class="fab fa-github"></i></span></a>
+                <!-- <a href="https://my-travela.herokuapp.com/">
                 <span class="contact-icons" style="color: skyblue;">
-                <i class="fas fa-window-maximize"></i></span></a></h3>
+                <i class="fas fa-window-maximize"></i></span></a> --></h3>
             <p><b><i>All-in-One: Itinerary Planner.Google Maps.Foursquare Places</i></b></p>
             <div class="app-pic">
                 <img src="./images/travela/Travela-main.png"><img src="./images/travela/Travela-google.png"><img src="./images/travela/Travela-itinerary.png">
@@ -82,7 +80,7 @@
 
             <p class="in-modal">
                 <ul>
-                    <li><b>Platform(s) used: React on Rails | PostgreSQL<b></li>
+                    <li class="platform">Platform(s) used: React on Rails | PostgreSQL</li>
                     <li>Search for places of interest in Google Maps and scout for nearby gems with Foursquare Places.</li>
                     <li>Add them into the Itinerary Planner with just one click!</li>
                 </ul>
@@ -108,7 +106,7 @@
 
             <p class="in-modal">
                 <ul>
-                    <li><b>Platform(s) used: Ruby on Rails | PostgreSQL</b></li>
+                    <li class="platform">Platform(s) used: Ruby on Rails | PostgreSQL</li>
                     <li>Reserve a seat and choose your desired meal before you go.</li>
                     <li>Viola! Meal will be served right when you reach the restaurant!</li>
                 </ul>
@@ -134,7 +132,7 @@
 
             <p class="in-modal">
                 <ul>
-                    <li><b>Platform(s) used: React | Express.js | Node.js</b></li>
+                    <li class="platform">Platform(s) used: React | Express.js | Node.js</li>
                     <li>A system for labs to track samples, equipment and manpower.</li>
                     <li>As these systems tend to have complex interfaces, this version simplifies it.</li>
                 </ul>
@@ -155,15 +153,14 @@
                 <i class="fas fa-window-maximize"></i></span></a></h3>
             <p><b><i>An Old-School Board Game</i></b></p>
             <div class="app-pic1">
-                <img src="./images/scrabble/scrabble-1.png">
+                <img src="./images/scrabble/scrabble-1.png"> Project under maintenance.
             </div>
 
             <p class="in-modal">
-                <ul>
-                    <li>Project under maintenance</li>
-                   <u><li><b>Platform(s) used: Vanilla Javascript</b></li></u>
-                    <u><li>Because I love word games!</li></u>
-                </ul>
+                <strike><ul>
+                   <li>Platform(s) used: Vanilla Javascript</li>
+                    <li>Because I love word games!</li>
+                </ul></strike>
             </p>
           </div>
         </div>
@@ -196,7 +193,7 @@
 
 </div>
 <footer>
-    Copyright 2018
+    Copyright &copy; 2018
     </footer>
      <script src="https://code.jquery.com/jquery-3.2.1.min.js" />
      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
