--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <h2 class="projects-title">MY PORTFOLIO</h2>
     <p>Here are some of the projects I've worked on. Click on them to find out more!</p>
     <p>
-        <button class="btn">Travela</button>| <button class="btn">Reasy</button> | <button class="btn">DEFT</button> | <button class="btn">Scrabble</button>
+        <button class="btn">Travela</button> <button class="btn">Reasy</button>  <button class="btn">DEFT</button>  <button class="btn">Scrabble</button>
     </p>
     </div>
 
@@ -67,7 +67,7 @@
           <!-- Modal content -->
           <div class="modal-content">
             <span class="close">&times;</span>
-            <h3>TRAVELA <a href="https://github.com/audthenerd/travela">
+            <h3>TRAVELA <a href="https://github.com/audthenerd/travela_latest">
                 <span class="contact-icons" style="color: grey;">
                 <i class="fab fa-github"></i></span></a>
                 <!-- <a href="https://my-travela.herokuapp.com/">
@@ -193,7 +193,7 @@
 
 </div>
 <footer>
-    Copyright &copy; 2018
+    Audrey Kow . Copyright &copy; 2018
     </footer>
      <script src="https://code.jquery.com/jquery-3.2.1.min.js" />
      <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
